Fixed filter button dark mode color
Fixed filter button dark mode color

--- a/react-frontend/internship-api-frontend/src/pages/admin/AdminPage.css
+++ b/react-frontend/internship-api-frontend/src/pages/admin/AdminPage.css
@@ -1,6 +1,7 @@
  .filter-buttona
 {
   background-color:#FFD700;
+  color:black;
   margin-top: 2.5%;
 
 }
