--- a/react-frontend/internship-api-frontend/src/pages/client/ClientPage.css
+++ b/react-frontend/internship-api-frontend/src/pages/client/ClientPage.css
@@ -1,6 +1,7 @@
  .filter-buttonc
 {
   background-color:#FFD700;
+  color: black;
   margin-top: 2.5%;
 
 }
