--- a/react-frontend/internship-api-frontend/src/pages/companyPrice/CompanyPricePage.css
+++ b/react-frontend/internship-api-frontend/src/pages/companyPrice/CompanyPricePage.css
@@ -16,6 +16,7 @@
  .filter-buttonco
 {
   background-color:#FFD700;
+  color:black;
   margin-top: 2.5%;
 
 }
