--- a/react-frontend/internship-api-frontend/src/pages/driver/DriverPage.css
+++ b/react-frontend/internship-api-frontend/src/pages/driver/DriverPage.css
@@ -21,6 +21,7 @@
 {
   background-color:#FFD700;
   margin-top: 2.5%;
+  color:black;
 
 }
 .no-results-message2
