--- a/react-frontend/internship-api-frontend/src/pages/driverVehicle/DriverVehiclePage.css
+++ b/react-frontend/internship-api-frontend/src/pages/driverVehicle/DriverVehiclePage.css
@@ -1,6 +1,7 @@
  .filter-buttondv
 {
   background-color:#FFD700;
+  color:black;
   margin-top: 2.5%;
 
 }
