--- a/react-frontend/internship-api-frontend/src/pages/review/ReviewPage.css
+++ b/react-frontend/internship-api-frontend/src/pages/review/ReviewPage.css
@@ -47,6 +47,7 @@
  .filter-buttonr
 {
   background-color:#FFD700;
+  color: black;
   margin-top: 2.5%;
 
 }
