--- a/react-frontend/internship-api-frontend/src/pages/statistics/StatisticsPage.css
+++ b/react-frontend/internship-api-frontend/src/pages/statistics/StatisticsPage.css
@@ -13,6 +13,7 @@
  .filter-buttons
 {
   background-color:#FFD700;
+  color: black;
   margin-top: 2.5%;
 
 }
